# pyFlameSolver

./: .gitignore  notebook.ipynb  pyproject.toml  setup.cfg
examples/: simple_flame.py
src/pyember/: __init__.py
src/pyember/core/: base.py  grid.py
src/pyember/solvers/: cross_system.py  diffusion_flame.py  integrator.py  split_manager.py
src/pyember/transport/: chemistry.py  convection.py  diffusion.py
src/pyember/utils/: visualization.py
tests/: conftest.py  test_base.py  test_convection.py  test_diffusion.py  test_grid.py  test_integrator.py
