[metadata]
name = pyember
version = 0.1.0
description = Python implementation of Ember flame solver
author = Eloghosa Ikponmwoba
author_email = eloghosaefficiency@gmail.com

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.20
    scipy>=1.7
    cantera>=3.0
    h5py>=3.0

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest>=6.0
    pytest-cov>=2.0